добавил handler для авторизации

--- a/config.env
+++ b/config.env
@@ -3,3 +3,6 @@ DBNAME = "libraly"
 DBUSER = "postgres"
 DBPASSWORD = "scell876"
 DBPORT = ":5432"
+ACCESSTIME = "3m"
+REFRESHTIME = "168h"
+KEY = "TyankiIGrechka"
