--- a/libraly-app/package.json
+++ b/libraly-app/package.json
@@ -11,8 +11,10 @@
     "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
     "antd": "^5.3.2",
+    "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.20.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
