--- a/libraly-app/package.json
+++ b/libraly-app/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
     "react-router-dom": "^6.9.0",
