--- a/libraly-app/package.json
+++ b/libraly-app/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.3.2",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
